@@ -42,6 +42,8 @@ Version 1.7.2
        casing for relative paths. (Stefan)
 - BUG: Issue #108: log dialog uses wrong
        file if sorted. (Stefan)
+- BUG: Issue #137: overlays don't propagate from
+       externals to their parent folders. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
